@@ -15,8 +15,8 @@ import com.github.scribejava.core.oauth.OAuthService;
 public abstract class AbstractRequest {
 
     public static final String DEFAULT_CONTENT_TYPE = "application/x-www-form-urlencoded";
+    public static final String CONTENT_TYPE = "Content-Type";
     protected static final String CONTENT_LENGTH = "Content-Length";
-    protected static final String CONTENT_TYPE = "Content-Type";
     private static final String OAUTH_PREFIX = "oauth_";
 
     private final String url;
